# living-vote-core-proof

./: .gitignore  COMPLIANCE.md  Makefile  README.md  invariants.md  living-vote-protocol.md  pyproject.toml
legal/: legal-faq.md  legal-mapping-de.md  legal-mapping-eu.md  legal-position-paper.md
living_vote/: engine.py  model.py  registry.py
tests/: test_engine.py  test_identity_binding.py  test_protocol_compliance.py  test_registry_with_engine.py
